# fomo-lp

./: README.md  pyproject.toml  requirements.txt
model_weights/: README.md
pipeline/: config.py  embed_all.py  embedding_dataset.py  fairness_report.py  identity_model.py  lp_fomo.py  make_dummy_embeddings.py
